--- a/app/package.json
+++ b/app/package.json
@@ -12,12 +12,14 @@
     "@mdi/font": "5.9.55",
     "@vue/composition-api": "^1.0.0-beta.15",
     "roboto-fontface": "*",
+    "three": "^0.145.0",
     "vue": ">=3.2.25",
     "vue-class-component": "^8.0.0-0",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@types/three": "^0.144.0",
     "@types/webfontloader": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
