--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@vue/composition-api": "^1.0.0-beta.15",
     "cannon-es": "^0.20.0",
     "cannon-es-debugger": "^1.0.0",
+    "quickhull3d": "^2.1.0",
     "roboto-fontface": "*",
     "three": "^0.145.0",
     "vue": ">=3.2.25",
