--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "three": "^0.145.0",
     "vue": ">=3.2.25",
     "vue-class-component": "^8.0.0-0",
+    "vue-router": "^4.2.4",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
