VF-28 - github link and some stuff

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,11 +3,12 @@ version: '3'
 tasks:
   run:
     cmds:
-      - docker-compose up
+      - yarn install
+      - yarn dev
 
   build:
     cmds:
-      - docker-compose build
+      - yarn build
 
   deploy:
     env:
@@ -23,9 +24,11 @@ tasks:
           cd /opt/$app
           git reset --hard HEAD
           git pull origin \$(git rev-parse --abbrev-ref HEAD)
+
           yarn install --network-timeout 180000
           yarn build
           docker compose build
+
           docker stack deploy -c docker-compose.yml $app
           docker run --rm -i \
             -v /var/run/docker.sock:/var/run/docker.sock \
